#334 fix spacing between logo and log in content in chrome

--- a/web/assets/css/responsive_css.css
+++ b/web/assets/css/responsive_css.css
@@ -2187,11 +2187,8 @@ box-shadow:         0px 1px 5px 0px rgba(50, 50, 50, 0.75);
 }
 
 .login_box .checkbox label {
-    line-height: 24px;
-}
-
-.login_box .checkbox label {
     font-weight: bold;
+    line-height: 24px;
 }
 
 .login_box p {
